Stop popup horizontal scroll. Change number abbreviation.

--- a/src/popup.css
+++ b/src/popup.css
@@ -17,7 +17,8 @@
 
 body {
     width: 225px;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
     background: var(--back);
     color: var(--text);
 }
